index qismi base ga bolib chiqdim

--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -1,10 +1,142 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 
-</body>
+<!--  13:28  -->
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Education Home Page1</title>
+
+    <!-- Css Files -->
+    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+    <link href="{% static 'css/font-awesome.css' %}" rel="stylesheet">
+    <link href="{% static 'css/flaticon.css' %}" rel="stylesheet">
+    <link href="{% static 'css/slick-slider.css' %}" rel="stylesheet">
+    <link href="{% static 'css/prettyphoto.css' %}" rel="stylesheet">
+    <link href="{% static 'build/mediaelementplayer.css' %}" rel="stylesheet">
+    <link href="{% static 'style.css' %}" rel="stylesheet">
+    <link href="{% static 'css/color.css' %}" rel="stylesheet">
+    <link href="{% static 'css/color-two.css' %}" rel="stylesheet">
+    <link href="{% static 'css/color-three.css' %}" rel="stylesheet">
+    <link href="{% static 'css/color-four.css' %}" rel="stylesheet">
+    <link href="{% static 'css/responsive.css' %}" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+
+    <!--// Main Wrapper \\-->
+    <div class="wm-main-wrapper">
+
+        {% include 'layout/header.html' %}
+
+        {% block content %}{% endblock %}
+
+        {% include 'layout/footer.html' %}
+
+	<div class="clearfix"></div>
+    </div>
+    <!--// Main Wrapper \\-->
+
+    <!-- ModalLogin Box -->
+    <div class="modal fade" id="ModalLogin" tabindex="-1" role="dialog">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-body">
+
+            <div class="wm-modallogin-form wm-login-popup">
+                <span class="wm-color">Login to Your Account</span>
+                <form>
+                    <ul>
+                        <li> <input type="text" value="Your Username" onblur="if(this.value == '') { this.value ='Your Username'; }" onfocus="if(this.value =='Your Username') { this.value = ''; }"> </li>
+                        <li> <input type="password" value="password" onblur="if(this.value == '') { this.value ='password'; }" onfocus="if(this.value =='password') { this.value = ''; }"> </li>
+                        <li> <a href="#" class="wm-forgot-btn">Forgot Password?</a> </li>
+                        <li> <input type="submit" value="Sign In"> </li>
+                    </ul>
+                </form>
+                <span class="wm-color">or try our socials</span>
+                <ul class="wm-login-social-media">
+                    <li><a href="#"><i class="wmicon-social5"></i> Facebook</a></li>
+                    <li class="wm-twitter-color"><a href="#"><i class="wmicon-social4"></i> twitter</a></li>
+                    <li class="wm-googleplus-color"><a href="#"><i class="fa fa-google-plus-square"></i> Google+</a></li>
+                </ul>
+                <p>Not a member yet? <a href="#">Sign-up Now!</a></p>
+            </div>
+            <div class="wm-modallogin-form wm-register-popup">
+                <span class="wm-color">create Your Account today</span>
+                <form>
+                    <ul>
+                        <li> <input type="text" value="Your Username" onblur="if(this.value == '') { this.value ='Your Username'; }" onfocus="if(this.value =='Your Username') { this.value = ''; }"> </li>
+                        <li> <input type="text" value="Your E-mail" onblur="if(this.value == '') { this.value ='Your E-mail'; }" onfocus="if(this.value =='Your E-mail') { this.value = ''; }"> </li>
+                        <li> <input type="password" value="password" onblur="if(this.value == '') { this.value ='password'; }" onfocus="if(this.value =='password') { this.value = ''; }"> </li>
+                        <li> <input type="text" value="Confirm Password" onblur="if(this.value == '') { this.value ='Confirm Password'; }" onfocus="if(this.value =='Confirm Password') { this.value = ''; }"> </li>
+                        <li> <input type="submit" value="Create Account"> </li>
+                    </ul>
+                </form>
+                <span class="wm-color">or signup with your socials:</span>
+                <ul class="wm-login-social-media">
+                    <li><a href="#"><i class="wmicon-social5"></i> Facebook</a></li>
+                    <li class="wm-twitter-color"><a href="#"><i class="wmicon-social4"></i> twitter</a></li>
+                    <li class="wm-googleplus-color"><a href="#"><i class="fa fa-google-plus-square"></i> Google+</a></li>
+                </ul>
+                <p>Already a member? <a href="#">Sign-in Here!</a></p>
+            </div>
+
+          </div>
+        </div>
+      <div class="clearfix"></div>
+      </div>
+    </div>
+    <!-- ModalLogin Box -->
+
+    <!-- ModalSearch Box -->
+    <div class="modal fade" id="ModalSearch" tabindex="-1" role="dialog">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-body">
+
+            <div class="wm-modallogin-form">
+                <span class="wm-color">Search Your KeyWord</span>
+                <form>
+                    <ul>
+                        <li> <input type="text" value="Keywords..." onblur="if(this.value == '') { this.value ='Keywords...'; }" onfocus="if(this.value =='Keywords...') { this.value = ''; }"> </li>
+                        <li> <input type="submit" value="Search"> </li>
+                    </ul>
+                </form>
+            </div>
+
+          </div>
+        </div>
+      <div class="clearfix"></div>
+      </div>
+    </div>
+    <!-- ModalSearch Box -->
+
+	<!-- jQuery (necessary for JavaScript plugins) -->
+	<script type="text/javascript" src="{% static 'script/jquery.js' %}"></script>
+	<script type="text/javascript" src="{% static 'script/modernizr.js' %}"></script>
+    <script type="text/javascript" src="{% static 'script/bootstrap.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'script/jquery.prettyphoto.js' %}"></script>
+    <script type="text/javascript" src="{% static 'script/jquery.countdown.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'script/fitvideo.js' %}"></script>
+    <script type="text/javascript" src="{% static 'script/skills.js' %}"></script>
+    <script type="text/javascript" src="{% static 'script/slick.slider.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'script/waypoints-min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'build/mediaelement-and-player.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'script/isotope.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'script/jquery.nicescroll.min.js' %}"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+    <script type="text/javascript" src="{% static 'script/functions.js' %}"></script>
+
+  </body>
+
+<!--  15:20  -->
 </html>
